syntax = "proto3";

option go_package = "loadBalancer/service;loadBalancer";

import "google/protobuf/wrappers.proto";

message loadBalanceRequest{
    int64 request_id = 1;
    int64 object_num = 2;
    int64 totalObjects = 3;
    repeated string keys =4;
    repeated string values = 5;
}

message loadBalanceResponse{
    int64 request_id = 1;
    int64 object_num = 2;
    int64 totalObjects = 3;
    repeated string keys = 4;
    repeated string values = 5;
}

message clientConnect{
    string id = 1;
}

service LoadBalancer{
    rpc addKeys(loadBalanceRequest) returns (loadBalanceResponse);
    rpc connectPing(clientConnect) returns (clientConnect);
    rpc initDB(loadBalanceRequest) returns (google.protobuf.BoolValue);
}