syntax = "proto3";

option go_package = "resolver/service;resolver";

message parsedQuery{
    string client_id = 1;
    string queryType = 2;
    string tableName = 3;
    repeated string colToGet =4;
    repeated string searchCol = 5;
    repeated string searchVal =6;
    repeated string searchType = 7;
    repeated string aggregateType = 8;
    repeated string orderBy = 9;
    repeated string joinColumns = 10;
    repeated string updateVal = 11;
}

message queryResponse{
    int64 client_id = 1;
    int64 request_id =2;
    repeated string keys = 3;
    repeated string values = 4;
}

message clientConnectResolver{
    string id = 1;
}


service resolver{
    rpc executeQuery(parsedQuery) returns (queryResponse);
    rpc connectPingResolver(clientConnectResolver) returns (clientConnectResolver);
}